# Tutorials

04_STL/code/: CMakeLists.txt
05_CPP11/code/: CMakeLists.txt
06_ITK-1_Segmentation/code/src/: main.cxx
07_ITK-2_Multiplication/code/src/: main.cxx
08_ITK-3_Registration/code/src/: main.cxx
09_ITK-4_LinearAlgebra/code/src/: main.cxx
11_ErrorHandling/code/: CMakeLists.txt
12_UnitTesting/code/: CMakeLists.txt
12_UnitTesting/code/src/: BasicApp.h  cbicaCmdParser.cpp  cbicaUtilities.cpp  cbicaUtilities.h
13_ITK-5_ML/code/src/: cbicaCmdParser.cpp  cbicaUtilities.cpp  cbicaUtilities.h
13_ITK-6_ML/code/src/: cbicaUtilities.h
14_LinearAlgebra_Armadillo/code/: CMakeLists.txt
14_LinearAlgebra_Armadillo/code/src/: cbicaCmdParser.cpp  cbicaITKSafeImageIO.h  cbicaUtilities.cpp
17_CMake-CTest-CDash/code/: CMakeLists.txt
17_CMake-CTest-CDash/code/src/: BasicApp.h  cbicaCmdParser.cpp  cbicaUtilities.cpp
17_CMake-CTest-CDash/code/testing/: testExe.cxx
